--- a/01_servlet/src/main/webapp/ex06_ajax/NewFile.html
+++ b/01_servlet/src/main/webapp/ex06_ajax/NewFile.html
@@ -48,7 +48,7 @@
       <form id="frm">
         <div>
         <input type="text" name="title" placeholder="제목">
-      </div>
+      </div>h
       <div>
         <input type="text" name="writer" placeholder="작성자">
       </div>
