--- a/02_servlet_ex/src/main/webapp/ex01/NewFile.html
+++ b/02_servlet_ex/src/main/webapp/ex01/NewFile.html
@@ -21,7 +21,7 @@
     <div id=wrap1>
     
   <!--폼 박스 시작  -->
-    <form id="frm" action="/servlet/servletex" method="post">
+    <form id="frm" action="/servlet_ex/ex01" method="post">
     
   <!--아이디 -->
    <div id="id_wrap">
